<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_Comm_Chat"
        android:title="@string/popupmenu1"
        />

    <item android:id="@+id/nav_Donations"
        android:title="@string/popupmenu2"
        />

    <item android:id="@+id/nav_Photos"
        android:title="@string/popupmenu3"
        />

    <item android:id="@+id/nav_Volunteer"
        android:title="@string/popupmenu4"
        />

    <item android:id="@+id/nav_About"
        android:title="@string/popupmenu5"
        />

    <item android:id="@+id/nav_Join_Us"
        android:title="@string/popupmenu6"
        />

    <item android:id="@+id/nav_Appointments"
        android:title="@string/popupmenu7"
        />

    <item android:id="@+id/nav_Account"
        android:title="@string/popupmenu8"
        />

    <item android:id="@+id/nav_Log_Out"
        android:title="@string/popupmenu9"
        android:icon="@drawable/baseline_logout_24"
        />
</menu>