<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/sermonsmenu"
        android:id="@+id/sermons_nav"
        android:icon="@drawable/baseline_mic_24"
        />

    <item
        android:title="@string/contactmenu"
        android:id="@+id/contactus_nav"
        android:icon="@drawable/baseline_contact_page_24"
         />

    <item
        android:title="@string/homesmenu"
        android:id="@+id/home_nav"
        android:icon="@drawable/baseline_home_24"
       />

    <item
        android:title="@string/eventsmenu"
        android:id="@+id/events_nav"
        android:icon="@drawable/baseline_calendar_month_24"
         />

    <item
        android:title="@string/menumenu"
        android:id="@+id/menu_nav"
        android:icon="@drawable/baseline_menu_24"
     />

</menu>