<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About1"
    android:id="@+id/About1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="214dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="282dp"
        android:layout_marginEnd="13dp"
        android:text="@string/About1p2"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="163dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="33dp"
        android:src="@drawable/church"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/faithtext"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="273dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="69dp"
        android:text="@string/about1subheading4"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_dashboard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="804dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="115dp"
        android:text="@string/About1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <View
        android:id="@+id/view"
        android:layout_width="357dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="37dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="56dp"
        android:background="#2792c4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="166dp"
        android:layout_centerInParent="true"
        android:text="@string/about1mainheading"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/stafftext"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="335dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="14dp"
        android:text="@string/about1subheading5"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/missiontext"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="211dp"
        android:text="@string/about1subheading2"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/beliefstext"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="197dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="141dp"
        android:text="@string/about1subheading3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/historytext"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/view2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="296dp"
        android:text="@string/about1subheading1"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="403dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="31dp"
            android:text="@string/About1p3"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.872" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="356dp"
            android:layout_height="111dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="212dp"
            android:text="@string/About1p4"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.205" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_bar">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="262dp"
        android:text="TextView" />

</RelativeLayout>