<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseLanguage">

    <Button
        android:id="@+id/englishbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="180dp"
        android:text="English" />

    <Button
        android:id="@+id/hindibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="183dp"
        android:text="Hindi" />

    <Button
        android:id="@+id/afrikaansbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="123dp"

        android:text="Afrikaans" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_bar">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="43dp"
        android:clickable="true"
        android:text="@string/changelangh2"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="29dp"
        android:clickable="true"
        android:text="@string/changelangh3"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:text="@string/changelangh6"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="437dp"
        android:layout_marginEnd="33dp"
        android:clickable="true"
        android:text="@string/changelangh5"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="33dp"
        android:clickable="true"
        android:text="@string/changelangh4"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="215dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="721dp"
        android:text="@string/changelangheading"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/englishflag"
        android:layout_width="36dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="332dp" />

    <ImageView
        android:id="@+id/hindiflag"
        android:layout_width="36dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="439dp"
        android:layout_marginEnd="335dp" />

    <ImageView
        android:id="@+id/arabicflag"
        android:layout_width="36dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="347dp"
        android:layout_marginEnd="338dp" />
</RelativeLayout>